# open-nexus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json
docs/: task.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  router.rs
src/components/: CommandBar.tsx  MicButton.tsx  ResponseDisplay.tsx  SettingsPanel.tsx  StatusIndicator.tsx
src/hooks/: useGlobalShortcut.ts
src/services/: config.ts  dictationRefiner.ts  llm.ts  parser.ts  skillLearning.ts  skillPlanner.ts  skillRegistry.ts  skillRouter.ts  skillStudio.ts  stt.ts
